[package]
name = "toy-cashu"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.1"
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
clap = { version = "4.5.50", features = ["derive"] }
hex = "0.4.3"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
