[package]
name = "toy-cashu"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.1"
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
ciborium = "0.2.2"
clap = { version = "4.5.50", features = ["derive"] }
hex = "0.4.3"
indexmap = "2.12.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rpassword = "7.4.0"
secp256k1 = { version ="0.31.1",  features = ["rand", "hashes"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
